2007-03-14 Marco Antonio Islas Cruz	<markuz@islascruz.org>
	* renaming lib_christine to libchristine affecting all
	module import.
	* firxin module import

2007-03-13 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* Appending the current dir to the PYTHON_PATH, usefull
	when we like to use the current modules (ej. in development)
	* Fixing a lot of missed names in several modules.
	* Fixing the PATH in lib_christine/Share.py.in, in the case
	that gui/ directory exists, try to use it.
	* Fixing several modules using this kind of for
		for (i in range(x))
	* several modules point to libchristine and that was
	changed to lib_christine.

2007-03-07 Miguel Vazquez Gocobachi <demrit@gnu.org>
	* libchristine/trans.py.in is now Translator.py.in
	* Translator.trans() is now Translator.parse
	* Translator is now Singleton instance
	* Adds pattern module and Singleton.py pattern
	* Adds Share.py to manage glade templates and images
	* Big code clean for christine.py.in and change to
	  Christine.py.in
	* Adds Validator.py for miscellanius comparation, like
	  isNull(), isString(), isInteger(), isFLoad(), etc.

2006-11-19 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* lib_christine/show_properties.py:
	Fixed the import fault (doesn't import discoverer) and
	the properties option was not working
2006-11-15 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* General:
	Little speed improvements
	* lib_christine/player.py:
	First upload
	* lib_christine/player:
	First Upload
	* lib_christine/player:
	First Upload
2006-11-10 Marco Antonio Islas Cruz	<markuz@islascruz.org>
	* christine:
	Tray Icon is no longer be showed by the "egg.tryicon" module
	we will use the new gtk.StatusIcon "widget?". Just to keep
	the gtk stuff in the place and adopt the new stuff just
	to avoid breaking thing in the future.
	There are some minor changes in christine.
2006-11-04 Marco Antonio Islas Crfuz <markuz@islascruz.org>
	* christine:
	Fixed a HUGE bug that let you re-import some songs if you 