@@ -363,9 +363,11 @@
         <child>
           <widget class="GtkVBox" id="VBoxVideo">
             <property name="visible">True</property>
+            <property name="spacing">3</property>
             <child>
               <widget class="GtkHBox" id="HBoxCairoDisplay">
                 <property name="visible">True</property>
+                <property name="spacing">3</property>
                 <child>
                   <placeholder/>
                 </child>
